[project]
name = "toil_batch_system_tes"
version = "0.0.1"
authors = [
  { name="Adam Novak", email="anovak@soe.ucsc.edu" },
]
description = "A TES batch system plugin for Toil"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "toil[aws]>5.12",
    "py-tes>=0.4.2,<1"
]

[project.urls]
Homepage = "https://github.com/adamnovak/toil_batch_system_tes"
